app should be done. Next improve layout

--- a/app/src/main/res/layout/sachbearbeiter_verwaltung_hs.xml
+++ b/app/src/main/res/layout/sachbearbeiter_verwaltung_hs.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/LoginScreen"
     tools:context=".Entitätsklassen.ExterneSchnittstellen.LehrVeranstaltungHS"
     android:background="@drawable/background">
     <TextView
