--- a/app/src/main/res/menu/admin_menu.xml
+++ b/app/src/main/res/menu/admin_menu.xml
@@ -25,7 +25,7 @@
 
     <item android:title="Log out"
         android:id="@+id/Ausloggen"
-        app:showAsAction="ifRoom">a
+        app:showAsAction="ifRoom">
 
     </item>
 </menu>
