--- a/app/src/main/res/layout/admin_sachbearbeiter_loeschen_ass.xml
+++ b/app/src/main/res/layout/admin_sachbearbeiter_loeschen_ass.xml
@@ -13,18 +13,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/SachbearbeiteroldName"
-            android:layout_width="wrap_content"
+        <fragment
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="select Username">
-        </TextView>
+            android:id="@+id/selectUsername"
+            android:name="com.example.framenttest_2.Entitätsklassen.ExterneSchnittstellen.SelectUsername_s">
 
+        </fragment>
         <Spinner
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/spinnerUsername"
-            android:layout_below="@+id/SachbearbeiteroldName"
+            android:layout_below="@+id/selectUsername"
+            android:layout_margin="50dp"
+            android:gravity="center">
             ></Spinner>
 
         <fragment
