--- a/app/src/main/res/layout/sachbearbeiter_name_s.xml
+++ b/app/src/main/res/layout/sachbearbeiter_name_s.xml
@@ -6,21 +6,16 @@
     android:layout_height="match_parent">
 
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Username">
-
-    </TextView>
-
     <EditText
-        android:id="@+id/usernameInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="text"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:layout_editor_absoluteX="0dp" />
+        android:id="@+id/usernameInput"
+        android:background="#30ffffff"
+        android:hint="Username"
+        android:textColorHint="@color/white"
+        android:textColor="@color/white"
+        android:layout_margin="10dp"
+        android:padding="20dp"/>
 
 
 </FrameLayout>
