--- a/app/src/main/res/layout/sachbearbeiters_password_s.xml
+++ b/app/src/main/res/layout/sachbearbeiters_password_s.xml
@@ -6,21 +6,18 @@
     android:layout_height="match_parent">
 
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Passoword">
-
-    </TextView>
-
     <EditText
-        android:id="@+id/password_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="text"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:layout_editor_absoluteX="0dp" />
+        android:id="@+id/passwordInput"
+        android:layout_below="@id/username"
+        android:background="#30ffffff"
+        android:hint="Password"
+        android:textColorHint="@color/white"
+        android:textColor="@color/white"
+        android:layout_margin="10dp"
+        android:padding="20dp"
+        android:inputType="textPassword"/>
 
 
 </FrameLayout>
