--- a/app/src/main/res/layout/admin_sachbearbeiter_erstellen_aas.xml
+++ b/app/src/main/res/layout/admin_sachbearbeiter_erstellen_aas.xml
@@ -36,6 +36,14 @@
         android:layout_below="@id/SachbearbeiterPassword"
         android:layout_weight="0" />
 
+        <TextView
+            android:id="@+id/LabelFortbildungen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Belegte / Bestandene Fortbildungen"
+            android:layout_below="@+id/SachbearbeiterBerechtigungen"/>
+
+
         <fragment
             android:id="@+id/SachbearbeiterOkButton"
             android:name="com.example.framenttest_2.Entitätsklassen.ExterneSchnittstellen.SachbearbeiterOKKnopfS"
